--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,10 +1,14 @@
 @import './base.css';
 
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  max-width: none;
+  margin: 0;
+  padding: 0;
   font-weight: normal;
+}
+
+body {
+  display: block;
 }
 
 a,
@@ -21,15 +25,15 @@ a,
   }
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 900px) {
   body {
-    display: flex;
+    display: block;
     place-items: center;
   }
 
   #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
+    display: block;
+    width: 100%;
+    padding: 2rem 0.5rem;
   }
 }
